prodmind/packages/parser/src/__tests__/fixtures/architectures/invalid-boundary-system/infra/logger.ts
export class Logger {
  static log(message: string): void {
    console.log(`[LOG] ${message}`);
  }

  info(message: string): void {
    console.info(`[INFO] ${message}`);
  }
}
